Prevent horizontal scrolling: Limit tooltip width; move day tooltips to the left
This commit fixes the horizontal scrolling problem: If the tooltips are
wider than the screen (even when hidden), horizontal scrolling is
allowed. This especially happens on devices with small screens like
smartphones.

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -145,3 +145,11 @@ a {
 .mdc-list-item__meta {
   text-align: center;
 }
+
+
+// fix tooltip max width to prevent horizontal scrolling
+.tooltip {
+  &::after {
+    max-width: 30vw;
+  }
+}
